<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/androidLogo"
        android:contentDescription="@string/android_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorText"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/answersResourceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        android:padding="7dp"
        />

    <LinearLayout
        android:id="@+id/rootTrueFalseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/trueBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/buttonText_true"
            android:background="@color/colorButtonBackground"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/falseBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/buttonText_false"
            android:background="@color/colorButtonBackground"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/nextBtn"
        android:contentDescription="@string/next_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_media_next"
        android:background="@color/colorNextButton"
        android:layout_marginTop="25dp"/>

</LinearLayout>